[gd_scene load_steps=7 format=2]

[ext_resource path="res://Door.gd" type="Script" id=1]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player_3D.gd" type="Script" id=2]
[ext_resource path="res://audio/doorOpen1.wav" type="AudioStream" id=3]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 3, 6, 0.2 )

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( -1.5, 3, 0.1, 1.5, 3, 0.1, -1.5, -3, 0.1, 1.5, 3, 0.1, 1.5, -3, 0.1, -1.5, -3, 0.1, 1.5, 3, -0.1, -1.5, 3, -0.1, 1.5, -3, -0.1, -1.5, 3, -0.1, -1.5, -3, -0.1, 1.5, -3, -0.1, 1.5, 3, 0.1, 1.5, 3, -0.1, 1.5, -3, 0.1, 1.5, 3, -0.1, 1.5, -3, -0.1, 1.5, -3, 0.1, -1.5, 3, -0.1, -1.5, 3, 0.1, -1.5, -3, -0.1, -1.5, 3, 0.1, -1.5, -3, 0.1, -1.5, -3, -0.1, 1.5, 3, 0.1, -1.5, 3, 0.1, 1.5, 3, -0.1, -1.5, 3, 0.1, -1.5, 3, -0.1, 1.5, 3, -0.1, -1.5, -3, 0.1, 1.5, -3, 0.1, -1.5, -3, -0.1, 1.5, -3, 0.1, 1.5, -3, -0.1, -1.5, -3, -0.1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1.54725, 2.62441, 0.168997 )

[node name="Door" type="StaticBody" groups=["door"]]
collision_layer = 128
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.52082, 3, 0 )
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.52082, 3, 0 )
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="monsterSensor" type="Area" parent="."]
transform = Transform( 1.03741, 0, 0, 0, 1, 0, 0, 0, 1, -0.0317788, 0, 0 )
collision_layer = 0
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="monsterSensor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.47526, 2.64569, 0 )
shape = SubResource( 3 )

[node name="openCloseSound" type="AudioStreamPlayer3D" parent="."]
unit_db = 5.0
script = ExtResource( 2 )
samples = [ ExtResource( 3 ) ]
random_strategy = 2
random_volume_range = 0.5
random_pitch_range = 0.5

[node name="TimerMonsterOpenDoor" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="body_entered" from="monsterSensor" to="." method="_on_monsterSensor_body_entered"]
[connection signal="body_exited" from="monsterSensor" to="." method="_on_monsterSensor_body_exited"]
[connection signal="timeout" from="TimerMonsterOpenDoor" to="." method="_on_TimerMonsterOpenDoor_timeout"]
